progressif/main/default/objects/Repertory__c/Repertory__c.object-meta.xml
<CustomObject>
    <label>Répertoire</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Nom du répertoire</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Répertoires</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>