progressif/main/default/objects/Repertory__c/fields/AdditionalFeePer__c.field-meta.xml
<CustomField>
    <fullName>AdditionalFeePer__c</fullName>
    <label>Additional fee per</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stream</fullName>
                <label>1</label>
            </value>
            <value>
                <fullName>Download</fullName>
                <label>2</label>
            </value>
            <value>
                <fullName>Subscriber month</fullName>
                <label>3</label>
            </value>
            <value>
                <fullName>Subscriber week</fullName>
                <label>4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>