progressif/main/default/objects/Repertory__c/fields/Advance__c.field-meta.xml
<CustomField>
    <fullName>Advance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Avance</label>
    <type>Checkbox</type>
</CustomField>