progressif/main/default/objects/Repertory__c/fields/AdvanceAmount__c.field-meta.xml
<CustomField>
    <fullName>AdvanceAmount__c</fullName>
    <label>Montant de l&#39;avance</label>
    <type>TextArea</type>
</CustomField>