progressif/main/default/objects/Repertory__c/fields/AdvanceEndDate__c.field-meta.xml
<CustomField>
    <fullName>AdvanceEndDate__c</fullName>
    <label>Date de Fin de l&#39;Avance</label>
    <type>Date</type>
</CustomField>