progressif/main/default/objects/Repertory__c/fields/AdvancePeriodEnd__c.field-meta.xml
<CustomField>
    <fullName>AdvancePeriodEnd__c</fullName>
    <label>Période fin Avance</label>
    <type>Date</type>
</CustomField>