progressif/main/default/objects/Repertory__c/fields/AdvancePeriodStart__c.field-meta.xml
<CustomField>
    <fullName>AdvancePeriodStart__c</fullName>
    <label>Période Debut Avance</label>
    <type>Date</type>
</CustomField>