progressif/main/default/objects/Repertory__c/fields/AdvanceStartingDate__c.field-meta.xml
<CustomField>
    <fullName>AdvanceStartingDate__c</fullName>
    <label>Date de Début de l&#39;Avance</label>
    <type>Date</type>
</CustomField>