progressif/main/default/objects/Repertory__c/fields/AmountMechanicalRepertory__c.field-meta.xml
<CustomField>
    <fullName>AmountMechanicalRepertory__c</fullName>
    <label>Montant Mechanical Repertoire</label>
    <type>TextArea</type>
</CustomField>