progressif/main/default/objects/Repertory__c/fields/AmountPerformingRepertory__c.field-meta.xml
<CustomField>
    <fullName>AmountPerformingRepertory__c</fullName>
    <label>Montant Performing Repertoire</label>
    <type>TextArea</type>
</CustomField>