progressif/main/default/objects/Repertory__c/fields/AmountRegularization__c.field-meta.xml
<CustomField>
    <fullName>AmountRegularization__c</fullName>
    <label>Montant de la régularisation</label>
    <type>TextArea</type>
</CustomField>