progressif/main/default/objects/Repertory__c/fields/AmoutAdditionalFee__c.field-meta.xml
<CustomField>
    <fullName>AmoutAdditionalFee__c</fullName>
    <label>Amout Additional Fee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>