progressif/main/default/objects/Repertory__c/fields/Annexe__c.field-meta.xml
<CustomField>
    <fullName>Annexe__c</fullName>
    <label>Annexe</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>