progressif/main/default/objects/Repertory__c/fields/AvanceMechanicalRepertory__c.field-meta.xml
<CustomField>
    <fullName>AvanceMechanicalRepertory__c</fullName>
    <label>Avance Mechanical Répertoire</label>
    <type>TextArea</type>
</CustomField>