progressif/main/default/objects/Repertory__c/fields/AvancePerformingRepertory__c.field-meta.xml
<CustomField>
    <fullName>AvancePerformingRepertory__c</fullName>
    <label>Avance Performing Repertoire</label>
    <type>TextArea</type>
</CustomField>