progressif/main/default/objects/Repertory__c/fields/Ceiling__c.field-meta.xml
<CustomField>
    <fullName>Ceiling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plafond</label>
    <type>Checkbox</type>
</CustomField>