progressif/main/default/objects/Repertory__c/fields/ComPublicRightIMPELRepertory__c.field-meta.xml
<CustomField>
    <fullName>ComPublicRightIMPELRepertory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Com to Public Right</label>
    <type>Checkbox</type>
</CustomField>