progressif/main/default/objects/Repertory__c/fields/ComPublicRightSOCAN__c.field-meta.xml
<CustomField>
    <fullName>ComPublicRightSOCAN__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Champ positionné dans la section &quot; SOCAN &quot; dans le type &quot; MT - Greater of - SACEM &quot; et le type &quot;MT - Lumpsum - SACEM &quot;</description>
    <label>Performing Repertoire</label>
    <type>Checkbox</type>
</CustomField>