progressif/main/default/objects/Repertory__c/fields/ComPublicRightWixen__c.field-meta.xml
<CustomField>
    <fullName>ComPublicRightWixen__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Performing Repertoire</label>
    <type>Checkbox</type>
</CustomField>