progressif/main/default/objects/Repertory__c/fields/ComPublicRightWixenUK__c.field-meta.xml
<CustomField>
    <fullName>ComPublicRightWixenUK__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Champ positionné dans la section &quot; Wixen UK&quot; dans le type &quot; MT - Greater of - SACEM &quot; et le type &quot;MT - Lumpsum - SACEM &quot;</description>
    <label>Performing Repertoire</label>
    <type>Checkbox</type>
</CustomField>