progressif/main/default/objects/Repertory__c/fields/DateContractSignature__c.field-meta.xml
<CustomField>
    <fullName>DateContractSignature__c</fullName>
    <label>Date de signature du contrat</label>
    <type>Date</type>
</CustomField>