progressif/main/default/objects/Repertory__c/fields/DirectorySACEM__c.field-meta.xml
<CustomField>
    <fullName>DirectorySACEM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Répertoire SACEM</label>
    <type>Checkbox</type>
</CustomField>