progressif/main/default/objects/Repertory__c/fields/DocumentPublishingDate__c.field-meta.xml
<CustomField>
    <fullName>DocumentPublishingDate__c</fullName>
    <label>Date de l&#39;édition du document</label>
    <type>Date</type>
</CustomField>