progressif/main/default/objects/Repertory__c/fields/EndDateIMPELService__c.field-meta.xml
<CustomField>
    <fullName>EndDateIMPELService__c</fullName>
    <label>Date de fin de service IMPEL</label>
    <type>Date</type>
</CustomField>