progressif/main/default/objects/Repertory__c/fields/EndPeriodRegularization__c.field-meta.xml
<CustomField>
    <fullName>EndPeriodRegularization__c</fullName>
    <label>Période fin Régularisation</label>
    <type>Date</type>
</CustomField>