progressif/main/default/objects/Repertory__c/fields/GlobalAmount__c.field-meta.xml
<CustomField>
    <fullName>GlobalAmount__c</fullName>
    <label>Montant global</label>
    <type>TextArea</type>
</CustomField>