progressif/main/default/objects/Repertory__c/fields/GlobalRepertory__c.field-meta.xml
<CustomField>
    <fullName>GlobalRepertory__c</fullName>
    <label>Global  Repertoire</label>
    <type>TextArea</type>
</CustomField>