progressif/main/default/objects/Repertory__c/fields/GlobalSeparateAdvance__c.field-meta.xml
<CustomField>
    <fullName>GlobalSeparateAdvance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Avance Globale ou séparée</label>
    <type>Checkbox</type>
</CustomField>