progressif/main/default/objects/Repertory__c/fields/IMPELDateSupplement__c.field-meta.xml
<CustomField>
    <fullName>IMPELDateSupplement__c</fullName>
    <label>Complément date IMPEL</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>