progressif/main/default/objects/Repertory__c/fields/IMPELStartDate__c.field-meta.xml
<CustomField>
    <fullName>IMPELStartDate__c</fullName>
    <label>Date de début du service IMPEL</label>
    <type>Date</type>
</CustomField>