progressif/main/default/objects/Repertory__c/fields/InternalValidation__c.field-meta.xml
<CustomField>
    <fullName>InternalValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validé en interne</label>
    <type>Checkbox</type>
</CustomField>