progressif/main/default/objects/Repertory__c/fields/MechanicalMusicSales__c.field-meta.xml
<CustomField>
    <fullName>MechanicalMusicSales__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Champ positionné dans la section &quot; MusicSales &quot; dans le type &quot; MT - Greater of - SACEM &quot; et le type &quot;MT - Lumpsum - SACEM &quot;</description>
    <label>Mechanical Repertoire</label>
    <type>Checkbox</type>
</CustomField>