progressif/main/default/objects/Repertory__c/fields/MechanicalRepertoireLoGreaterOf__c.field-meta.xml
<CustomField>
    <fullName>MechanicalRepertoireLoGreaterOf__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Champ positionné dans la section &quot;Informations &quot; dans le type &quot; LO - Greater of &quot; et &quot; LO - LumpSum &quot;</description>
    <label>Mechanical Répertoire</label>
    <type>Checkbox</type>
</CustomField>