progressif/main/default/objects/Repertory__c/fields/MechanicalRepertory__c.field-meta.xml
<CustomField>
    <fullName>MechanicalRepertory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mechanical Répertoire</label>
    <type>Checkbox</type>
</CustomField>