progressif/main/default/objects/Repertory__c/fields/MechanicalSACEMDirectRepertory__c.field-meta.xml
<CustomField>
    <fullName>MechanicalSACEMDirectRepertory__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Champ positionné dans la section &quot;SACEM Direct Repertoire&quot; dans le type &quot; MT - Greater of - SACEM &quot; et le type &quot;MT - Lumpsum - SACEM &quot;</description>
    <label>Mechanical Repertoire</label>
    <type>Checkbox</type>
</CustomField>