progressif/main/default/objects/Repertory__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunité</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Répertoires</relationshipLabel>
    <relationshipName>R_pertoires</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>