progressif/main/default/objects/Repertory__c/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <label>Forfait</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Global</fullName>
                <label>1</label>
            </value>
            <value>
                <fullName>Séparé</fullName>
                <label>2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>