progressif/main/default/objects/Repertory__c/fields/PartnerValidation__c.field-meta.xml
<CustomField>
    <fullName>PartnerValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validé par le partenaire</label>
    <type>Checkbox</type>
</CustomField>