progressif/main/default/objects/Repertory__c/fields/PaymentTermsAdvance__c.field-meta.xml
<CustomField>
    <fullName>PaymentTermsAdvance__c</fullName>
    <label>Modalités de Paiement de l&#39;Avance</label>
    <type>TextArea</type>
</CustomField>