progressif/main/default/objects/Repertory__c/fields/PerformingRepertoireLoLumpSum__c.field-meta.xml
<CustomField>
    <fullName>PerformingRepertoireLoLumpSum__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Champ positionné dans la section &quot;Informations&quot; dans le type &quot;LO -Greater Of &quot; et &quot; LO - LumpSum &quot;</description>
    <label>Performing Répertoire</label>
    <type>Checkbox</type>
</CustomField>