progressif/main/default/objects/Repertory__c/fields/PerformingRepertory__c.field-meta.xml
<CustomField>
    <fullName>PerformingRepertory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Performing Répertoire</label>
    <type>Checkbox</type>
</CustomField>