progressif/main/default/objects/Repertory__c/fields/RegularisationEndingDate__c.field-meta.xml
<CustomField>
    <fullName>RegularisationEndingDate__c</fullName>
    <label>Date de Fin de la Régularisation</label>
    <type>Date</type>
</CustomField>