progressif/main/default/objects/Repertory__c/fields/RegularisationStartingDate__c.field-meta.xml
<CustomField>
    <fullName>RegularisationStartingDate__c</fullName>
    <label>Date de Début de la Régularisation</label>
    <type>Date</type>
</CustomField>