progressif/main/default/objects/Repertory__c/fields/RegularizationPeriodStart__c.field-meta.xml
<CustomField>
    <fullName>RegularizationPeriodStart__c</fullName>
    <label>Période Debut Régularisation</label>
    <type>Date</type>
</CustomField>