progressif/main/default/objects/Repertory__c/fields/RegularizationTermsPayement__c.field-meta.xml
<CustomField>
    <fullName>RegularizationTermsPayement__c</fullName>
    <label>Modalités de paiement Régularisation</label>
    <type>TextArea</type>
</CustomField>