progressif/main/default/objects/Repertory__c/fields/Remuneration__c.field-meta.xml
<CustomField>
    <fullName>Remuneration__c</fullName>
    <label>Rémunération Relative</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>