progressif/main/default/objects/Repertory__c/fields/SacemRepertory__c.field-meta.xml
<CustomField>
    <fullName>SacemRepertory__c</fullName>
    <label>Montant SACEM Repertoire</label>
    <type>TextArea</type>
</CustomField>