progressif/main/default/objects/Repertory__c/fields/SendTheTermSheetIMPEL__c.field-meta.xml
<CustomField>
    <fullName>SendTheTermSheetIMPEL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Envoyer le TermSheet IMPEL</label>
    <type>Checkbox</type>
</CustomField>