progressif/main/default/objects/Repertory__c/fields/SendTheTermSheetUMPI__c.field-meta.xml
<CustomField>
    <fullName>SendTheTermSheetUMPI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Envoyer le TermSheet UMPI</label>
    <type>Checkbox</type>
</CustomField>