progressif/main/default/objects/Repertory__c/fields/StateCeiling__c.field-meta.xml
<CustomField>
    <fullName>StateCeiling__c</fullName>
    <label>Plafond à renseigner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>