progressif/main/default/objects/Repertory__c/fields/Step__c.field-meta.xml
<CustomField>
    <fullName>Step__c</fullName>
    <label>Étape</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brouillon</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>Validation interne</fullName>
                <label>2</label>
            </value>
            <value>
                <fullName>Validation Externe</fullName>
                <label>3</label>
            </value>
            <value>
                <fullName>Négociation</fullName>
                <label>4</label>
            </value>
            <value>
                <fullName>Finalisé</fullName>
                <label>5</label>
            </value>
            <value>
                <fullName>Terminé</fullName>
                <label>6</label>
            </value>
            <value>
                <fullName>Perdu</fullName>
                <label>7</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>