progressif/main/default/objects/Repertory__c/fields/TECH_ACJCaseManager__c.field-meta.xml
<CustomField>
    <fullName>TECH_ACJCaseManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TECH Chargé de dossier</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ChildUser5</relationshipName>
    <type>Lookup</type>
</CustomField>