progressif/main/default/objects/Repertory__c/fields/TECH_ExternalValidation__c.field-meta.xml
<CustomField>
    <fullName>TECH_ExternalValidation__c</fullName>
    <label>TECH_ValidationExterne</label>
    <type>Date</type>
</CustomField>