progressif/main/default/objects/Repertory__c/fields/TECH_InternalValidation__c.field-meta.xml
<CustomField>
    <fullName>TECH_InternalValidation__c</fullName>
    <label>TECH_ValidationInterne</label>
    <type>Date</type>
</CustomField>