progressif/main/default/objects/Repertory__c/fields/TECH_Manager__c.field-meta.xml
<CustomField>
    <fullName>TECH_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TECH Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ChildUser4</relationshipName>
    <type>Lookup</type>
</CustomField>