progressif/main/default/objects/Repertory__c/fields/threshold__c.field-meta.xml
<CustomField>
    <fullName>threshold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Seuil</label>
    <type>Checkbox</type>
</CustomField>