progressif/main/default/objects/Repertory__c/recordTypes/IMPEL.recordType-meta.xml
<RecordType>
    <fullName>IMPEL</fullName>
    <active>false</active>
    <label>IMPEL</label>
</RecordType>