progressif/main/default/objects/Repertory__c/recordTypes/LOCAL.recordType-meta.xml
<RecordType>
    <fullName>LOCAL</fullName>
    <active>false</active>
    <label>LOCAL</label>
</RecordType>