progressif/main/default/objects/Repertory__c/recordTypes/LOGreaterof.recordType-meta.xml
<RecordType>
    <fullName>LOGreaterof</fullName>
    <active>true</active>
    <label>LO - Greater of</label>
</RecordType>