progressif/main/default/objects/Repertory__c/recordTypes/LOLumpSum.recordType-meta.xml
<RecordType>
    <fullName>LOLumpSum</fullName>
    <active>true</active>
    <label>LO - LumpSum</label>
</RecordType>