progressif/main/default/objects/Repertory__c/recordTypes/MTGreaterofIMPEL.recordType-meta.xml
<RecordType>
    <fullName>MTGreaterofIMPEL</fullName>
    <active>true</active>
    <label>MT - Greater of - IMPEL</label>
</RecordType>