progressif/main/default/objects/Repertory__c/recordTypes/MTGreaterofSACEM.recordType-meta.xml
<RecordType>
    <fullName>MTGreaterofSACEM</fullName>
    <active>true</active>
    <label>MT - Greater of - SACEM</label>
</RecordType>