progressif/main/default/objects/Repertory__c/recordTypes/MTGreaterofUMPI.recordType-meta.xml
<RecordType>
    <fullName>MTGreaterofUMPI</fullName>
    <active>true</active>
    <label>MT - Greater of - UMPI</label>
</RecordType>