progressif/main/default/objects/Repertory__c/recordTypes/MTLumpSumIMPEL.recordType-meta.xml
<RecordType>
    <fullName>MTLumpSumIMPEL</fullName>
    <active>true</active>
    <label>MT - LumpSum - IMPEL</label>
</RecordType>