progressif/main/default/objects/Repertory__c/recordTypes/MTLumpSumSACEM.recordType-meta.xml
<RecordType>
    <fullName>MTLumpSumSACEM</fullName>
    <active>true</active>
    <label>MT - LumpSum - SACEM</label>
</RecordType>