progressif/main/default/objects/Repertory__c/recordTypes/MTLumpSumUMPI.recordType-meta.xml
<RecordType>
    <fullName>MTLumpSumUMPI</fullName>
    <active>true</active>
    <label>MT - LumpSum - UMPI</label>
</RecordType>