progressif/main/default/objects/Repertory__c/recordTypes/MTSLAIMPEL.recordType-meta.xml
<RecordType>
    <fullName>MTSLAIMPEL</fullName>
    <active>true</active>
    <label>MT - SLA - IMPEL</label>
</RecordType>