progressif/main/default/objects/Repertory__c/recordTypes/MTSLASACEMUMPI.recordType-meta.xml
<RecordType>
    <fullName>MTSLASACEMUMPI</fullName>
    <active>true</active>
    <label>MT - SLA - SACEM / UMPI</label>
</RecordType>