progressif/main/default/objects/Repertory__c/recordTypes/SACEM.recordType-meta.xml
<RecordType>
    <fullName>SACEM</fullName>
    <active>false</active>
    <label>SACEM</label>
</RecordType>