progressif/main/default/objects/Repertory__c/recordTypes/UMPI.recordType-meta.xml
<RecordType>
    <fullName>UMPI</fullName>
    <active>true</active>
    <label>UMPI</label>
</RecordType>