progressif/main/default/objects/Repertory__c/validationRules/REP02_Step_ManualRepValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>REP02_Step_ManualRepValidation</fullName>
    <active>true</active>
    <errorConditionFormula>Not($User.BypassVR__c ) &amp;&amp;
(ISPICKVAL( PRIORVALUE(Step__c) ,&quot;Brouillon&quot;) ||  ISPICKVAL( PRIORVALUE(Step__c) ,&quot;Validation Interne&quot;))
&amp;&amp; 
InternalValidation__c = false &amp;&amp;
OR(
ISPICKVAL( Step__c, &quot;Validation Externe&quot;),
ISPICKVAL( Step__c , &quot;Négociation&quot;),
ISPICKVAL( Step__c , &quot;Finalisé&quot;),
ISPICKVAL( Step__c , &quot;Terminé&quot;)
)</errorConditionFormula>
    <errorMessage>Merci de ne pas passer manuellement à une étape autre que &quot;Validation Interne&quot;</errorMessage>
</ValidationRule>