progressif/main/default/objects/Repertory__c/validationRules/REP03_AdvanceEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>REP03_AdvanceEndDate</fullName>
    <active>true</active>
    <errorConditionFormula>AdvanceEndDate__c  &lt; AdvanceStartingDate__c</errorConditionFormula>
    <errorMessage>Merci de renseigner la date de fin Avance supérieure à la date de début Avance</errorMessage>
</ValidationRule>