progressif/main/default/objects/Repertory__c/validationRules/REP04_EndDateIMPELService.validationRule-meta.xml
<ValidationRule>
    <fullName>REP04_EndDateIMPELService</fullName>
    <active>true</active>
    <errorConditionFormula>EndDateIMPELService__c &lt; IMPELStartDate__c</errorConditionFormula>
    <errorMessage>Merci de renseigner la date de fin de service IMPEL supérieure à la date de début de service IMPEL</errorMessage>
</ValidationRule>