progressif/main/default/objects/Repertory__c/validationRules/REP05_MechanicalRepertory.validationRule-meta.xml
<ValidationRule>
    <fullName>REP05_MechanicalRepertory</fullName>
    <active>true</active>
    <errorConditionFormula>$User.BypassVR__c = False &amp;&amp;
MechanicalRepertory__c =true &amp;&amp;
NOT ISBLANK(AvancePerformingRepertory__c )</errorConditionFormula>
    <errorMessage>Merci de ne pas renseigner le champ &quot;Avance Performing Repertory &quot; si la case &quot;Mechanical Repertoire&quot; est cochée</errorMessage>
</ValidationRule>