progressif/main/default/objects/Repertory__c/validationRules/REP06_PerformingRepertory.validationRule-meta.xml
<ValidationRule>
    <fullName>REP06_PerformingRepertory</fullName>
    <active>true</active>
    <errorConditionFormula>$User.BypassVR__c = False &amp;&amp;
PerformingRepertory__c =true &amp;&amp;
NOT ISBLANK( AvanceMechanicalRepertory__c )</errorConditionFormula>
    <errorMessage>Merci de ne pas renseigner le champ &quot;Avance Mechanical Repertoire &quot; si la case &quot;Performing Repertoire&quot; est cochée</errorMessage>
</ValidationRule>